Add a dummy game creation endpoint
This commit lays the foundation of the endpoint. It uses a hard-coded
username and no authentication (instead of properly using JWT from
Authorization header).

Relates to #255.
